RESOLVED FIXED166040
Fix unwanted deletion of record/replay files
https://bugs.webkit.org/show_bug.cgi?id=166040
Summary Fix unwanted deletion of record/replay files
Keith Rollin
Reported 2016-12-19 14:56:00 PST
As part of some refactoring, the objects that create the meta files that are part of the record/replay cache would get deleted. They were always getting opened in "write" mode", which would truncate the files. Fix this so that the files are opened in the write modes for record, replay, and neither.
Attachments
Patch (2.45 KB, patch)
2016-12-19 14:59 PST, Keith Rollin
no flags
Keith Rollin
Comment 1 2016-12-19 14:58:08 PST
That is, the "right" modes, not the "write" modes.
Keith Rollin
Comment 2 2016-12-19 14:59:00 PST
Alex Christensen
Comment 3 2016-12-19 15:05:02 PST
Comment on attachment 297481 [details] Patch r=me. Since the m_loadFileHandle and m_replayFileHandle are used only for logging when replaying, do you think it would be good to have "Log" somewhere in their name?
Keith Rollin
Comment 4 2016-12-19 15:43:42 PST
I'll file a new bug for that, since naming things is one of the Big Unsolved Problems in Computer Science.
WebKit Commit Bot
Comment 5 2016-12-19 16:37:42 PST
Comment on attachment 297481 [details] Patch Clearing flags on attachment: 297481 Committed r210005: <http://trac.webkit.org/changeset/210005>
WebKit Commit Bot
Comment 6 2016-12-19 16:37:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.